@@ -1,7 +1,7 @@
 package com.wemirr.platform.tms.controller;
 
 import com.baomidou.mybatisplus.core.metadata.IPage;
-import com.wemirr.framework.commons.entity.KeyVal;
+import com.wemirr.framework.commons.entity.Dict;
 import com.wemirr.framework.db.mybatisplus.wrap.Wraps;
 import com.wemirr.platform.tms.domain.entity.Fleet;
 import com.wemirr.platform.tms.domain.req.FleetPageReq;
@@ -15,6 +15,7 @@ import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @author Levin
@@ -30,11 +31,11 @@ public class FleetController {
 
     @Operation(summary = "车队列表 - [Levin] - [DONE]", description = "车队列表")
     @GetMapping("/dict_list")
-    public List<KeyVal> list(Boolean enabled) {
+    public List<Dict<?>> list(Boolean enabled) {
         return this.fleetService.list(Wraps.<Fleet>lbQ().eq(Fleet::getEnabled, enabled))
                 .stream()
-                .map(x -> KeyVal.builder().value(x.getId()).label(x.getFleetName()).build())
-                .toList();
+                .map(x -> Dict.builder().value(x.getId()).label(x.getFleetName()).build())
+                .collect(Collectors.toList());
     }
 
     @PostMapping("/page")
